# introspection-result-checking

./: .gitignore  CMakeLists.txt  README.md  get_tc.py  response_lib.bc  response_lib.c  response_lib.cpp  run-rc-eval.sh  run-rc-pipeline.sh  run-rc.sh  run.sh  snake.c  syminputBC.py
klee/: build.sh  get_tc.py  out  out2  out3  out4  out5  out6  print.py  test.cpp
src/: .FunctionsTestCaseManager.h.swo  CMakeLists.txt  FunctionDominanceTree.cpp  FunctionDominanceTree.h  FunctionTestCase.h  FunctionsTestCaseManager.h  GuardsInserter.cpp  GuardsInserter.h  GuardsNetwork.cpp  GuardsNetwork.h  PassRegistration.cpp  SensitiveFunctionMarkPass.cpp  SensitiveFunctionMarkPass.h  Types.h  Utils.h
test/: functions.txt  test.c  test.cpp
